sfSandBoxCode/force-app/main/default/objects/Campaign_Influence__c/Campaign_Influence__c.object-meta.xml
<CustomObject>
    <label>Campaign Influence</label>
    <nameField>
        <displayFormat>CI {000000}</displayFormat>
        <label>Campaign Influence Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Influence</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>