sfSandBoxCode/force-app/main/default/objects/Campaign_Influence__c/fields/Collection_Data__c.field-meta.xml
<CustomField>
    <fullName>Collection_Data__c</fullName>
    <label>Collection Data</label>
    <referenceTo>Collection_Data__c</referenceTo>
    <relationshipLabel>Campaign Influence</relationshipLabel>
    <relationshipName>Campaign_Influence</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>