sfSandBoxCode/force-app/main/default/objects/Campaign_Influence__c/fields/Event_Tool__c.field-meta.xml
<CustomField>
    <fullName>Event_Tool__c</fullName>
    <formula>IF(INCLUDES( Toilet_Campaign__r.Event_Tool__c , &quot;Vouchers&quot; ), &quot;Vouchers;&quot;,&quot;&quot;) + 
IF(INCLUDES( Toilet_Campaign__r.Event_Tool__c , &quot;Posters&quot; ), &quot;Posters;&quot;,&quot;&quot;) + 
IF(INCLUDES( Toilet_Campaign__r.Event_Tool__c , &quot;Flyers&quot; ), &quot;Flyers;&quot;,&quot;&quot;) + 
IF(INCLUDES( Toilet_Campaign__r.Event_Tool__c , &quot;Month Memberships&quot; ), &quot;Month Memberships;&quot;,&quot;&quot;) + 
IF(INCLUDES( Toilet_Campaign__r.Event_Tool__c , &quot;Week Memberships&quot; ), &quot;Week Memberships;&quot;,&quot;&quot;) + 
IF(INCLUDES( Toilet_Campaign__r.Event_Tool__c , &quot;Public Address System&quot; ), &quot;Public Address System;&quot;,&quot;&quot;) + 
IF(INCLUDES( Toilet_Campaign__r.Event_Tool__c , &quot;T-Shirts&quot; ), &quot;T-Shirts;&quot;,&quot;&quot;) + 
IF(INCLUDES( Toilet_Campaign__r.Event_Tool__c , &quot;Forum&quot; ), &quot;Forum;&quot;,&quot;&quot;) + 
IF(INCLUDES( Toilet_Campaign__r.Event_Tool__c , &quot;Performance&quot; ), &quot;Performance;&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Tool(s)</label>
    <type>Text</type>
</CustomField>