sfSandBoxCode/force-app/main/default/objects/Campaign_Influence__c/fields/Fix__c.field-meta.xml
<CustomField>
    <fullName>Fix__c</fullName>
    <label>Fix</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>