sfSandBoxCode/force-app/main/default/objects/Campaign_Influence__c/fields/Toilet_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Toilet_Campaign__c</fullName>
    <label>Toilet Campaign</label>
    <referenceTo>Toilet_Campaign__c</referenceTo>
    <relationshipLabel>Campaign Influence</relationshipLabel>
    <relationshipName>Campaign_Influence</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>