sfSandBoxCode/force-app/main/default/objects/Campaign_Influence__c/fields/Total_KGs_day__c.field-meta.xml
<CustomField>
    <fullName>Total_KGs_day__c</fullName>
    <formula>Collection_Data__r.Total_Waste_kg_day__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Waste (KGs/day)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>