sfSandBoxCode/force-app/main/default/objects/Campaign_Influence__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Collection_Data__c</columns>
    <columns>Event_Tool__c</columns>
    <columns>Toilet_Campaign__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>